--- a/index.html
+++ b/index.html
@@ -2306,10 +2306,10 @@ const CONSULT_MODE_LABELS = {
             const hpi = patient.HPI || '';
             const ros = patient.ROS || '';
             const pmh = patient.PMH || '';
-            const meds = patient.Meds || '';
-            const all = patient.All || '';
-            const surghx = patient['Surg hx'] || '';
-            const fsh = patient.FSH || '';
+            const meds = patient.Meds || 'denies';
+            const all = patient.All || 'denies';
+            const surghx = patient['Surg hx'] || 'denies';
+            const fsh = patient.FSH || 'denies';
             const violin = patient.VIOLIN || '';
             const pe = patient.PE || '';
             const plan = patient['To do'] || '';
