--- a/index.html
+++ b/index.html
@@ -5879,7 +5879,7 @@ function extractDoseInfo(line) {
     let presentation = `${name}\n${rm}\nMRN: ${mrn}\n\n`;
     presentation += `Consult for ${cc}\n\n`;
     presentation += `${ageGender} ${pmhPhrase}, ${hpi} ${ros}\n\n`;
-    presentation += `${violin} ${pe}\n\n`;
+    presentation += `${violin} \n\n ${pe}\n\n`;
     presentation += `Plan: ${todo}`;
     
     
