--- a/index.html
+++ b/index.html
@@ -713,9 +713,10 @@
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    bottom: 125%;
-    left: 100%;
-    margin-left: 8px;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 8px;
     background: var(--card-bg);
     color: var(--text-primary);
     padding: 0.5rem;
@@ -728,7 +729,6 @@
     max-width: 300px;
     transition: opacity 0.3s;
 }
-
 
 
 .help-icon:hover .help-tooltip {
