--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
     opacity: 0;
     position: absolute;
     top: 100%;
-    left: 50%;
+    right: 50%;
     transform: translateX(-50%);
     margin-top: 8px;
     background: var(--card-bg);
