--- a/index.html
+++ b/index.html
@@ -688,8 +688,17 @@
     font-size: 0.9rem;
 }
 
-/* Help icons */
-.help-icon {
+
+
+
+
+
+
+
+
+
+
+		.help-icon {
     display: inline-block;
     width: 16px;
     height: 16px;
@@ -704,17 +713,12 @@
     position: relative;
 }
 
-
-
-
-
-
 .help-tooltip {
     visibility: hidden;
     opacity: 0;
     position: absolute;
     top: 100%;
-    right: 50%;
+    left: 50%;
     transform: translateX(-50%);
     margin-top: 8px;
     background: var(--card-bg);
@@ -730,13 +734,10 @@
     transition: opacity 0.3s;
 }
 
-
 .help-icon:hover .help-tooltip {
     visibility: visible;
     opacity: 1;
 }
-
-
 
 
 
