--- a/index.html
+++ b/index.html
@@ -717,21 +717,24 @@
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 8px;
+    top: 50%;
+    left: 100%;
+    transform: translateY(-50%);
+    margin-left: 12px;
     background: var(--card-bg);
     color: var(--text-primary);
-    padding: 0.5rem;
-    border-radius: 0.25rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
     border: 1px solid var(--border);
     white-space: pre-line;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     z-index: 1000;
-    min-width: 200px;
-    max-width: 300px;
+    min-width: 400px;
+    max-width: 600px;
+    max-height: 500px;
+    overflow-y: auto;
     transition: opacity 0.3s;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 
 .help-icon:hover .help-tooltip {
