--- a/index.html
+++ b/index.html
@@ -713,7 +713,17 @@
     position: relative;
 }
 
-.help-tooltip {
+
+
+
+
+
+
+
+
+
+
+		.help-tooltip {
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -723,19 +733,52 @@
     margin-left: 12px;
     background: var(--card-bg);
     color: var(--text-primary);
-    padding: 1rem;
-    border-radius: 0.5rem;
-    border: 1px solid var(--border);
+    padding: 1.5rem;
+    border-radius: 0.75rem;
+    border: 2px solid var(--border);
     white-space: pre-line;
-    font-size: 0.9rem;
+    font-size: 1rem;
+    line-height: 1.4;
     z-index: 1000;
-    min-width: 400px;
-    max-width: 600px;
-    max-height: 500px;
+    min-width: 600px;
+    max-width: 800px;
+    width: 700px;
+    height: 600px;
+    max-height: 80vh;
     overflow-y: auto;
+    overflow-x: hidden;
     transition: opacity 0.3s;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
 }
+
+/* Custom scrollbar for the tooltip */
+.help-tooltip::-webkit-scrollbar {
+    width: 8px;
+}
+
+.help-tooltip::-webkit-scrollbar-track {
+    background: var(--dark-bg);
+    border-radius: 4px;
+}
+
+.help-tooltip::-webkit-scrollbar-thumb {
+    background: var(--primary);
+    border-radius: 4px;
+}
+
+.help-tooltip::-webkit-scrollbar-thumb:hover {
+    background: var(--primary-dark);
+}
+
+
+
+
+
+
+
+
+
+		
 
 .help-icon:hover .help-tooltip {
     visibility: visible;
