--- a/index.html
+++ b/index.html
@@ -704,15 +704,18 @@
     color: white;
     border: none;
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    font-size: 0.7rem;
-    margin-left: 8px;
+    width: 18px;
+    height: 18px;
+    font-size: 0.65rem;
+    margin-left: 6px;
     cursor: pointer;
     transition: all 0.3s ease;
     font-weight: bold;
+    padding: 0;
+    line-height: 1;
+    font-family: monospace;
+    vertical-align: middle;
 }
-
 
 
 		
