--- a/index.html
+++ b/index.html
@@ -841,7 +841,19 @@
 
 
 
-
+/* Mobile-specific help button adjustments */
+@media (max-width: 768px) {
+    .help-button {
+        width: 20px;
+        height: 20px;
+        min-width: 20px;
+        min-height: 20px;
+        max-width: 20px;
+        max-height: 20px;
+        font-size: 0.7rem;
+        margin-left: 4px;
+    }
+}
 
 
 
