--- a/index.html
+++ b/index.html
@@ -4499,7 +4499,11 @@ function extractIntakeOutputData(text) {
             lastUrineTime: null,
             drains: {},
             other: {}
-        }
+        }, 
+		       
+        totalIntake: null,
+        totalOutput: null,
+        fluidBalance: null
     };
 
     // Extract intake/output section
