--- a/index.html
+++ b/index.html
@@ -5019,7 +5019,7 @@ if (lastImportedData) {
     
     if (fluidBalance !== null) {
         const sign = fluidBalance >= 0 ? '+' : '';
-        fishbone += `Fluid Balance: ${sign}${fluidBalance.toFixed(1)} mL\n`;
+        fishbone += `${sign}${fluidBalance.toFixed(1)} mL\n`;
     }
 }
 
