--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
             box-sizing: border-box;
         }
 
-  }
+        body {
+            background: #000000;
+            color: #e0e0e0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 20px;
+            min-height: 100vh;
+        }
 
         .container {
             max-width: 900px;
             margin: 0 auto;
-            background: rgba(30, 30, 46, 0.9);
+            background: #0a0a0a;
             border-radius: 20px;
             padding: 30px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.8);
         }
 
         h1 {
@@ -188,10 +194,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Medical Checklists</h1>
         
         <div class="tabs">
-            <button class="tab-button active" data-tab="violin">VIOLIN</button>
+            <button class="tab-button active" data-tab="violin">Chartcheck</button>
             <button class="tab-button" data-tab="trauma">Trauma</button>
             <button class="tab-button" data-tab="consult">Consult</button>
             <button class="tab-button" data-tab="problems">Problems/HPI</button>
