--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
                     </div>
                     <div class="checklist-item sub-item">
                         <input type="checkbox" id="lytes">
-                        <label for="lytes">Lytes: BMP, Ca, Mg, P, Tbil, Dbili</label>
+                        <label for="lytes">Lytes: BMP, Ca, Mg, P </label>
                     </div>
                     <div class="checklist-item sub-item">
                         <input type="checkbox" id="gi-labs">
-                        <label for="gi-labs">GI Labs: ALK, GGT, AST/ALT</label>
+                        <label for="gi-labs">GI Labs: AST/ALT, Tbili, Dbili, ALK, GGT, AST/ALT</label>
                     </div>
                     <div class="checklist-item sub-item">
                         <input type="checkbox" id="abg">
@@ -424,7 +424,7 @@
                 </div>
                 <div class="checklist-item">
                     <input type="checkbox" id="neuro-exam">
-                    <label for="neuro-exam">Exam: GCS 15 (E4V5M6), PERRLA, strength and sensation intact BUE+BLE, CN II-XII grossly intact, EOMI, minimal pain</label>
+                    <label for="neuro-exam">Exam: GCS 15 (E4V5M6), PERRLA, strength and sensation intact BUE+BLE, CN II-XII grossly intact, EOMI, pain well controlled</label>
                 </div>
                 <div class="checklist-item">
                     <input type="checkbox" id="neuro-meds">
