--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
                     <label for="labs"><strong>Labs</strong></label>
                 </div>
                 <div class="bullet-item">CBC/COAGS: WBC, Hgb, HCT, PLT, Diff, PT, PTT/INR, Fibrinogen, ROTEM</div>
-                <div class="bullet-item">Lytes: BMP, Ca, Mg, P, Tbil, Dbili</div>
-                <div class="bullet-item">GI Labs: ALK, GGT, AST/ALT</div>
+                <div class="bullet-item">Lytes: BMP, Ca, Mg, P </div>
+                <div class="bullet-item">GI Labs: ALT/AST, Tbil, Dbili, ALK, GGT, Amylase, Lipase</div>
                 <div class="bullet-item">ABG: pH, PO2, PCO2, Bicarb, Base excess, Lactate</div>
                 <div class="bullet-item">MISC: Trops, CK, CKMB, Hgb A1C, albumin, prealbumin, Procal, UA, Urine studies</div>
                 <div class="bullet-item">Microbiology/pathology results</div>
