--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 </div>
                 <div class="checklist-item">
                     <input type="checkbox" id="neuro-meds">
-                    <label for="neuro-meds">Meds: wean off sedation, convert pain meds to PO and home regimen</label>
+                    <label for="neuro-meds">Meds: wean off sedation, convert pain meds to PO and home regimen, sedation holiday</label>
                 </div>
                 <div class="checklist-item">
                     <input type="checkbox" id="neuro-ebm">
@@ -446,7 +446,7 @@
                 </div>
                 <div class="checklist-item">
                     <input type="checkbox" id="pulm-wean">
-                    <label for="pulm-wean">Wean off support, optimize vent settings</label>
+                    <label for="pulm-wean">Wean off support, optimize vent settings (need daily CXR and ABG esp for chest tubes )</label>
                 </div>
                 <div class="checklist-item">
                     <input type="checkbox" id="pulm-trach">
