--- a/index.html
+++ b/index.html
@@ -789,19 +789,19 @@
                     <input type="checkbox" id="trauma-patient-care">
                     <label for="trauma-patient-care"><strong>Patient care</strong></label>
                 </div>
-                <div class="bullet-item">Blood glucose monitoring <input type="checkbox" id=""> </div>
-                <div class="bullet-item">Lines/tubes/drains: Drain / NGT / Foley / OGT / chest tube / central line / arterial line / Peripheral IV orders <input type="checkbox" id=""> </div>
-                <div class="bullet-item">Vital signs <input type="checkbox" id=""></div>
-                <div class="bullet-item">Intake and output<input type="checkbox" id=""></div>
-                <div class="bullet-item">Intermittent Pneumatic Compression/SCDs<input type="checkbox" id=""></div>
-                <div class="bullet-item">Cardiac telemetry<input type="checkbox" id=""></div>
-                <div class="bullet-item">Daily weight<input type="checkbox" id=""></div>
-                <div class="bullet-item">Neurological / neurovascular checks<input type="checkbox" id=""></div>
-                <div class="bullet-item">Code / resuscitation status  <input type="checkbox" id=""> </div>
-                <div class="bullet-item">Incentive spirometry<input type="checkbox" id=""> </div>
-                <div class="bullet-item">Continuous pulse oximetry<input type="checkbox" id=""> </div>
-                <div class="bullet-item">Notify provider of abnormal vital signs (SBP >180 or <100, MAP <65, HR >110 or <50, RR >30 or <10, Change in O2 delivery) <input type="checkbox" id=""> </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Blood glucose monitoring  </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Cardiac telemetry</div> 
+                <div class="bullet-item"> <input type="checkbox" id=""> Lines/tubes/drains: Drain / NGT / Foley / OGT / chest tube / central line / arterial line / Peripheral IV orders  </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Intake and output</div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Intermittent Pneumatic Compression/SCDs</div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Neurological / neurovascular checks</div> 
+                <div class="bullet-item"> <input type="checkbox" id=""> Vital signs </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Weight</div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Code / resuscitation status   </div>
                 <div class="bullet-item">Activity: OOB ad lib/with assistance/Bedrest, weight bearing status <input type="checkbox" id=""> </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Incentive spirometry </div>
+                <div class="bullet-item"> <input type="checkbox" id="">  Continuous pulse oximetry</div>
+                <div class="bullet-item">Notify provider of abnormal vital signs (SBP >180 or <100, MAP <65, HR >110 or <50, RR >30 or <10, Change in O2 delivery) <input type="checkbox" id=""> </div>
 
                 <div class="checklist-item">
                     <input type="checkbox" id="trauma-pain">
@@ -879,19 +879,19 @@
                     <input type="checkbox" id="consult-patient-care">
                     <label for="consult-patient-care"><strong>Patient care</strong></label>
                 </div>
-                <div class="bullet-item">Blood glucose monitoring</div>
-                <div class="bullet-item">Lines/tubes/drains: Drain / NGT / Foley / OGT / chest tube / central line / arterial line / Peripheral IV orders</div>
-                <div class="bullet-item">Vital signs</div>
-                <div class="bullet-item">Intake and output</div>
-                <div class="bullet-item">Intermittent Pneumatic Compression/SCDs</div>
-                <div class="bullet-item">Cardiac telemetry</div>
-                <div class="bullet-item">Daily weight</div>
-                <div class="bullet-item">Neurological / neurovascular checks</div>
-                <div class="bullet-item">Code / resuscitation status</div>
-                <div class="bullet-item">Incentive spirometry</div>
-                <div class="bullet-item">Continuous pulse oximetry</div>
-                <div class="bullet-item">Notify provider of abnormal vital signs (SBP >180 or <100, MAP <65, HR >110 or <50, RR >30 or <10, Change in O2 delivery)</div>
-                <div class="bullet-item">Activity: OOB ad lib/with assistance/Bedrest, weight bearing status</div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Blood glucose monitoring  </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Cardiac telemetry</div> 
+                <div class="bullet-item"> <input type="checkbox" id=""> Lines/tubes/drains: Drain / NGT / Foley / OGT / chest tube / central line / arterial line / Peripheral IV orders  </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Intake and output</div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Intermittent Pneumatic Compression/SCDs</div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Neurological / neurovascular checks</div> 
+                <div class="bullet-item"> <input type="checkbox" id=""> Vital signs </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Weight</div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Code / resuscitation status   </div>
+                <div class="bullet-item">Activity: OOB ad lib/with assistance/Bedrest, weight bearing status <input type="checkbox" id=""> </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Incentive spirometry </div>
+                <div class="bullet-item"> <input type="checkbox" id="">  Continuous pulse oximetry</div>
+                <div class="bullet-item">Notify provider of abnormal vital signs (SBP >180 or <100, MAP <65, HR >110 or <50, RR >30 or <10, Change in O2 delivery) <input type="checkbox" id=""> </div>
 
                 <div class="checklist-item">
                     <input type="checkbox" id="consult-pain">
