--- a/index.html
+++ b/index.html
@@ -798,10 +798,10 @@
                 <div class="bullet-item"> <input type="checkbox" id=""> Vital signs </div>
                 <div class="bullet-item"> <input type="checkbox" id=""> Weight</div>
                 <div class="bullet-item"> <input type="checkbox" id=""> Code / resuscitation status   </div>
-                <div class="bullet-item">Activity: OOB ad lib/with assistance/Bedrest, weight bearing status <input type="checkbox" id=""> </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Activity: OOB ad lib/with assistance/Bedrest, weight bearing status  </div>
                 <div class="bullet-item"> <input type="checkbox" id=""> Incentive spirometry </div>
                 <div class="bullet-item"> <input type="checkbox" id="">  Continuous pulse oximetry</div>
-                <div class="bullet-item">Notify provider of abnormal vital signs (SBP >180 or <100, MAP <65, HR >110 or <50, RR >30 or <10, Change in O2 delivery) <input type="checkbox" id=""> </div>
+                <div class="bullet-item">  <input type="checkbox" id=""> Notify provider of abnormal vital signs (SBP >180 or <100, MAP <65, HR >110 or <50, RR >30 or <10, Change in O2 delivery) </div>
 
                 <div class="checklist-item">
                     <input type="checkbox" id="trauma-pain">
@@ -888,10 +888,10 @@
                 <div class="bullet-item"> <input type="checkbox" id=""> Vital signs </div>
                 <div class="bullet-item"> <input type="checkbox" id=""> Weight</div>
                 <div class="bullet-item"> <input type="checkbox" id=""> Code / resuscitation status   </div>
-                <div class="bullet-item">Activity: OOB ad lib/with assistance/Bedrest, weight bearing status <input type="checkbox" id=""> </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Activity: OOB ad lib/with assistance/Bedrest, weight bearing status  </div>
                 <div class="bullet-item"> <input type="checkbox" id=""> Incentive spirometry </div>
                 <div class="bullet-item"> <input type="checkbox" id="">  Continuous pulse oximetry</div>
-                <div class="bullet-item">Notify provider of abnormal vital signs (SBP >180 or <100, MAP <65, HR >110 or <50, RR >30 or <10, Change in O2 delivery) <input type="checkbox" id=""> </div>
+                <div class="bullet-item"> <input type="checkbox" id=""> Notify provider of abnormal vital signs (SBP >180 or <100, MAP <65, HR >110 or <50, RR >30 or <10, Change in O2 delivery)  </div>
 
                 <div class="checklist-item">
                     <input type="checkbox" id="consult-pain">
